tests/corpus/pass/phase1/221_borrow_then_let.gw
fn main() -> i32 {
    let x: i32 = 42;
    let r: &i32 = &x;
    let y: i32 = *r;
    return y;
}
